add create user and item route
